<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SecondFragment">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:textColor="@color/blackText"
            android:textSize="@dimen/heading_text_h1"
            android:textStyle="bold"
            android:text="@string/measurementsTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:textColor="@color/blackText"
            android:textSize="@dimen/heading_text_h3"
            android:text="@string/measurements_subTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"/>
        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:adjustViewBounds="true"
            android:src="@drawable/male_body_tip"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/aImageTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_small_padding"
            android:layout_marginRight="@dimen/default_small_padding"
            android:src="@drawable/a_m_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image"
            />
        <TextView
            android:id="@+id/aTagHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/height"
            android:textSize="@dimen/heading_text_h2"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/aImageTag"
            />
        <TextView
            android:id="@+id/heightTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/height_tips"
            app:layout_constraintTop_toBottomOf="@+id/aTagHeading"
            app:layout_constraintStart_toEndOf="@+id/aImageTag"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/bImageTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_small_padding"
            android:layout_marginRight="@dimen/default_small_padding"
            android:src="@drawable/b_m_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heightTips"
            />
        <TextView
            android:id="@+id/bTagHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/chest"
            android:textSize="@dimen/heading_text_h2"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            app:layout_constraintTop_toBottomOf="@+id/heightTips"
            app:layout_constraintStart_toEndOf="@+id/bImageTag"
            />
        <TextView
            android:id="@+id/chestTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/chestTips"
            app:layout_constraintTop_toBottomOf="@+id/bTagHeading"
            app:layout_constraintStart_toEndOf="@+id/bImageTag"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/cImageTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_small_padding"
            android:layout_marginRight="@dimen/default_small_padding"
            android:src="@drawable/c_m_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chestTips"
            />
        <TextView
            android:id="@+id/cTagHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/waist"
            android:textSize="@dimen/heading_text_h2"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            app:layout_constraintTop_toBottomOf="@+id/chestTips"
            app:layout_constraintStart_toEndOf="@+id/cImageTag"
            />
        <TextView
            android:id="@+id/wasitTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/waistTips"
            app:layout_constraintTop_toBottomOf="@+id/cTagHeading"
            app:layout_constraintStart_toEndOf="@+id/cImageTag"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/dImageTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_small_padding"
            android:layout_marginRight="@dimen/default_small_padding"
            android:src="@drawable/d_m_round"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wasitTips"
            />
        <TextView
            android:id="@+id/dTagHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/hips"
            android:textSize="@dimen/heading_text_h2"
            android:textStyle="bold"
            android:textColor="@color/blackText"
            app:layout_constraintTop_toBottomOf="@+id/wasitTips"
            app:layout_constraintStart_toEndOf="@+id/dImageTag"
            />
        <TextView
            android:id="@+id/hipsTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hipTips"
            app:layout_constraintTop_toBottomOf="@+id/dTagHeading"
            app:layout_constraintStart_toEndOf="@+id/dImageTag"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hipsTips" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>