<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBackground"
    tools:context=".MaleMeasurementFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteBackground">

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:text="@string/hello_first_fragment"
            android:textColor="@color/blackText"
            android:textSize="@dimen/heading_text_h1"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/scaleRG"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/scaleRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@drawable/inch_tab"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <RadioButton
                android:id="@+id/inchRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:button="@android:color/transparent"
                android:textColor="@color/whiteBackground"
                android:text="in"/>
            <RadioButton
                android:id="@+id/centiRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:button="@android:color/transparent"
                android:text="cm"/>
        </RadioGroup>

        <TextView
            android:id="@+id/subtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_padding"
            android:paddingEnd="@dimen/default_padding"
            android:text="@string/measurement_subtitle"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_first" />

        <TextView
            android:id="@+id/measurementGuideText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:text="@string/click_here"
            app:layout_constraintTop_toBottomOf="@+id/subtitleText"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text=" or "
            app:layout_constraintTop_toBottomOf="@+id/subtitleText"
            app:layout_constraintStart_toEndOf="@+id/measurementGuideText"/>

        <TextView
            android:id="@+id/skipText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/colorAccent"
            android:text="@string/skip_to_do_it_later"
            app:layout_constraintTop_toBottomOf="@+id/subtitleText"
            app:layout_constraintStart_toEndOf="@+id/or"/>


        <TextView
            android:id="@+id/heightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/height"
            android:textSize="@dimen/heading_text_h3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/measurementGuideText"/>

        <LinearLayout
            android:id="@+id/llHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/heightLabel"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/heightFeet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:padding="@dimen/default_small_padding"
                android:text="0"
                android:background="@color/whiteBackground"/>
            <TextView
                android:id="@+id/unitLabelFT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_ft"/>

            <View
                android:id="@+id/heightDividerView"
                android:layout_width="1.5dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llHeight"
                android:background="@color/divider"/>

            <EditText
                android:id="@+id/heightInch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:padding="@dimen/default_small_padding"
                android:text="0"
                android:background="@color/whiteBackground"/>
            <TextView
                android:id="@+id/unitLabelIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_in"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llHeight"
            android:background="@color/divider"/>


        <TextView
            android:id="@+id/waistLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/waist"
            android:textSize="@dimen/heading_text_h3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llHeight"/>

        <TextView
            android:id="@+id/hipsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/hips"
            android:textSize="@dimen/heading_text_h3"
            app:layout_constraintStart_toEndOf="@+id/centerVerticalGuideline"
            app:layout_constraintTop_toBottomOf="@+id/llHeight"/>
        <LinearLayout
            android:id="@+id/llWaistHips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/waistLabel"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/waist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:padding="@dimen/default_small_padding"
                android:text="0"
                android:background="@color/whiteBackground"/>
            <TextView
                android:id="@+id/waistMeasureLabelIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_in"/>

            <View
                android:layout_width="1.5dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llHeight"
                android:background="@color/divider"/>

            <EditText
                android:id="@+id/hips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:padding="@dimen/default_small_padding"
                android:text="0"
                android:background="@color/whiteBackground"/>
            <TextView
                android:id="@+id/hipsMeasureLabelIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/measure_in"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llWaistHips"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/chestSizeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/chest"
            android:textSize="@dimen/heading_text_h3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llWaistHips"/>

        <LinearLayout
            android:id="@+id/llBrasize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/chestSizeLabel"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/chest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:padding="@dimen/default_small_padding"
                android:text="0"
                android:background="@color/whiteBackground"/>
            <TextView
                android:id="@+id/chestIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="in"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llBrasize"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/dressSizeQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/dress_size_normally_wear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llBrasize"/>

        <TextView
            android:id="@+id/dressSizeAnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingTop="@dimen/default_small_padding"
            android:paddingBottom="@dimen/default_small_padding"
            android:hint="@string/select_size"
            android:textColor="@color/blackText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dressSizeQuestion"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dressSizeAnd"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/topSizeQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/top_size_normally_wear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dressSizeAnd"/>

        <TextView
            android:id="@+id/topSizeAnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingTop="@dimen/default_small_padding"
            android:paddingBottom="@dimen/default_small_padding"
            android:hint="@string/select_size"
            android:textColor="@color/blackText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topSizeQuestion"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topSizeAnd"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/bottomSizeQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/bottom_size_normally_wear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topSizeAnd"/>

        <TextView
            android:id="@+id/bottomSizeAnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingTop="@dimen/default_small_padding"
            android:paddingBottom="@dimen/default_small_padding"
            android:hint="@string/select_size"
            android:textColor="@color/blackText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomSizeQuestion"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bottomSizeAnd"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/button_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/skip"
            android:background="@drawable/male_button"
            android:textSize="@dimen/heading_text_h2"
            android:textColor="@color/whiteBackground"
            android:gravity="center_horizontal"
            android:paddingTop="17dp"
            app:layout_constraintTop_toBottomOf="@+id/bottomSizeAnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/button_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/blackText"
            android:textSize="@dimen/heading_text_h3"
            android:background="@color/whiteBackground"
            android:elevation="0dp"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/button_skip"
            app:layout_constraintStart_toStartOf="@+id/button_skip"
            app:layout_constraintTop_toBottomOf="@+id/button_skip" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerVerticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>